--- a/list_files_v2.yml
+++ b/list_files_v2.yml
@@ -10,5 +10,5 @@
      
    - name: List files in path
      debug:
-       msg: "output: {{ item [filename] }}"
-     loop: "{{ result.files }}"
+       msg: "{{ item }}"
+       loop: "{{ result.files }}"
