--- a/run_python_file.yml
+++ b/run_python_file.yml
@@ -3,7 +3,7 @@
   hosts: all
   tasks:
     - name: run sharepoint_data_refresh.py script
-      script: C:/Users/CN331870/Documents/hello.py
-      args:
+      script:
         executable: C:/Program Files/Python311/python.exe
+        cmd: C:/Users/CN331870/Documents/hello.py
         remote_src: yes
