--- a/run_python_file2.yml
+++ b/run_python_file2.yml
@@ -2,5 +2,5 @@
 - name: run Python script
   hosts: all
   tasks:
-    - name: run sharepoint_data_refresh.py script
-      command: python C:/Users/CN331870/Documents/sharepoint_data_refresh.py
+    - name: run hello.py script
+      command: python C:/Users/CN331870/Documents/hello.py
