--- a/run_python_file2.yml
+++ b/run_python_file2.yml
@@ -2,5 +2,11 @@
 - name: run Python script
   hosts: all
   tasks:
+    - name: symlink /usr/bin/python -> /usr/bin/python3
+      raw: |
+        if [ -f /usr/bin/python3 ] && [ ! -f /usr/bin/python ]; then
+          ln --symbolic /usr/bin/python3 /usr/bin/python; 
+        fi
+      become: true
     - name: run hello.py script
       command: python C:/Users/CN331870/Documents/hello.py
