--- a/run_python_file2.yml
+++ b/run_python_file2.yml
@@ -2,7 +2,7 @@
 - name: run Python script
   hosts: all
   vars:
-    ansible_python_interpreter: /usr/bin/env
+    ansible_python_interpreter: '/usr/bin/env'
   tasks:
     - name: run hello.py script
       command: python C:/Users/CN331870/Documents/hello.py
