--- a/run_python_file2.yml
+++ b/run_python_file2.yml
@@ -9,4 +9,5 @@
       register: output
       
     - name: show output
-      debug: output.stdout_lines
+      debug: 
+        msg: output.stdout_lines
