--- a/sql_python_file.yml
+++ b/sql_python_file.yml
@@ -1,6 +1,7 @@
 ---
 - name: run Python script
   hosts: all
+  delegate_to: localhost
   vars:
     ansible_python_interpreter: '/usr/bin/env'
   tasks:
