--- a/sql_python_file.yml
+++ b/sql_python_file.yml
@@ -6,10 +6,14 @@
     ansible_become: true
     ansible_become_method: runas
     ansible_become_user: CENTENE\CN331870
-  delegate_to: 172.19.44.193
   tasks:
     - name: run hello.py script
       win_command: python C:/Users/CN331870/Documents/sqldb.py
+      vars:
+        ansible_python_interpreter: '/usr/bin/env'
+        ansible_become: true
+        ansible_become_method: runas
+        ansible_become_user: CENTENE\CN331870
       register: output
       
     - name: show output
